fix: review feedback

--- a/chart/.snapshots/example-prod.yaml
+++ b/chart/.snapshots/example-prod.yaml
@@ -123,6 +123,46 @@ subjects:
     name: hcloud-csi-controller
     namespace: "kube-system"
 ---
+# Source: hcloud-csi/templates/controller/service.yaml
+apiVersion: v1
+kind: Service
+metadata:
+  name: hcloud-csi-controller-metrics
+  namespace: "kube-system"
+  labels:
+    app.kubernetes.io/name: hcloud-csi
+    app.kubernetes.io/instance: hcloud-csi
+    app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/component: controller
+spec:
+  ports:
+    - name: metrics
+      port: 9189
+  selector:
+    app.kubernetes.io/name: hcloud-csi
+    app.kubernetes.io/instance: hcloud-csi
+    app.kubernetes.io/component: controller
+---
+# Source: hcloud-csi/templates/node/service.yaml
+apiVersion: v1
+kind: Service
+metadata:
+  name: hcloud-csi-node-metrics
+  namespace: "kube-system"
+  labels:
+    app.kubernetes.io/name: hcloud-csi
+    app.kubernetes.io/instance: hcloud-csi
+    app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/component: node
+spec:
+  ports:
+    - name: metrics
+      port: 9189
+  selector:
+    app.kubernetes.io/name: hcloud-csi
+    app.kubernetes.io/instance: hcloud-csi
+    app.kubernetes.io/component: node
+---
 # Source: hcloud-csi/templates/node/daemonset.yaml
 apiVersion: apps/v1
 kind: DaemonSet
@@ -221,9 +261,13 @@ spec:
           env:
             - name: CSI_ENDPOINT
               value: unix:///run/csi/socket
+            - name: METRICS_ENDPOINT
+              value: "0.0.0.0:9189"
             - name: ENABLE_METRICS
-              value: "false"
+              value: "true"
           ports:
+            - containerPort: 9189
+              name: metrics
             - name: healthz
               protocol: TCP
               containerPort: 9808
@@ -384,8 +428,10 @@ spec:
               value: unix:///run/csi/socket
             - name: HCLOUD_VOLUME_DEFAULT_LOCATION
               value: "nbg1"
+            - name: METRICS_ENDPOINT
+              value: "0.0.0.0:9189"
             - name: ENABLE_METRICS
-              value: "false"
+              value: "true"
             - name: KUBE_NODE_NAME
               valueFrom:
                 fieldRef:
@@ -404,6 +450,8 @@ spec:
               cpu: 10m
               memory: 40Mi
           ports:
+            - name: metrics
+              containerPort: 9189
             - name: healthz
               protocol: TCP
               containerPort: 9808
