--- a/chart/templates/controller/deployment.yaml
+++ b/chart/templates/controller/deployment.yaml
@@ -42,7 +42,7 @@ spec:
         {{- end }}
     spec:
       serviceAccountName: {{ template "common.names.serviceAccountName" . }}-controller
-      {{- include "common.images.pullSecrets" (dict "images" (list .Values.controller.image) "context" .) | nindent 6 }}
+      {{- include "common.images.pullSecrets" (dict "images" .Values.controller.image "context" .) | nindent 6 }}
       {{- if .Values.controller.affinity }}
       affinity: {{- include "common.tplvalues.render" ( dict "value" .Values.controller.affinity "context" $) | nindent 8 }}
       {{- end }}
