--- a/chart/templates/controller/serviceaccount.yaml
+++ b/chart/templates/controller/serviceaccount.yaml
@@ -18,5 +18,5 @@ metadata:
     {{- include "common.tplvalues.render" (dict "value" .Values.serviceAccount.annotations "context" $) | nindent 4 }}
     {{- end }}
   {{- end }}
-#automountServiceAccountToken: {{ .Values.serviceAccount.automountServiceAccountToken }}
+automountServiceAccountToken: {{ .Values.serviceAccount.automountServiceAccountToken }}
 {{- end }}
