--- a/deploy/kubernetes/hcloud-csi.yml
+++ b/deploy/kubernetes/hcloud-csi.yml
@@ -11,7 +11,7 @@ metadata:
     app.kubernetes.io/instance: hcloud-csi
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: controller
-#automountServiceAccountToken: true
+automountServiceAccountToken: true
 ---
 # Source: hcloud-csi/templates/core/storageclass.yaml
 kind: StorageClass
@@ -161,7 +161,7 @@ metadata:
     app.kubernetes.io/instance: hcloud-csi
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: node
-    app: hcloud-csi # Compatibility with old manifests
+    app: hcloud-csi 
 spec:
   updateStrategy:
     type: RollingUpdate
@@ -290,7 +290,7 @@ metadata:
     app.kubernetes.io/instance: hcloud-csi
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: controller
-    app: hcloud-csi-controller # Compatibility with old manifests
+    app: hcloud-csi-controller 
 spec:
   replicas: 1
   strategy:
