ci: fix release-please issues with helm
- two unecessary labels were added to the kubernetes manifests, these
  labels are helm specific/have a helm specific value.
- The image version in the rendered manifests did not update in the
  release-please PR, causing the manifests check to fail.

--- a/chart/templates/node/daemonset.yaml
+++ b/chart/templates/node/daemonset.yaml
@@ -99,7 +99,7 @@ spec:
           resources: {{- toYaml .Values.node.resources.livenessProbe | nindent 12 }}
           {{- end }}
         - name: hcloud-csi-driver
-          image: {{ tpl .Values.node.image.hcloudCSIDriver.name . }}
+          image: {{ tpl .Values.node.image.hcloudCSIDriver.name . }} # x-release-please-version
           imagePullPolicy: {{ .Values.node.image.hcloudCSIDriver.pullPolicy }}
           command: [/bin/hcloud-csi-driver-node]
           volumeMounts:
