--- a/chart/.snapshots/example-prod.yaml
+++ b/chart/.snapshots/example-prod.yaml
@@ -245,7 +245,7 @@ spec:
               cpu: 10m
               memory: 20Mi
         - name: hcloud-csi-driver
-          image: docker.io/hetznercloud/hcloud-csi-driver:v2.4.0
+          image: docker.io/hetznercloud/hcloud-csi-driver:v2.4.0 # x-release-please-version
           imagePullPolicy: IfNotPresent
           command: [/bin/hcloud-csi-driver-node]
           volumeMounts:
@@ -420,7 +420,7 @@ spec:
             name: socket-dir
 
         - name: hcloud-csi-driver
-          image: docker.io/hetznercloud/hcloud-csi-driver:v2.4.0
+          image: docker.io/hetznercloud/hcloud-csi-driver:v2.4.0 # x-release-please-version
           imagePullPolicy: IfNotPresent
           command: [/bin/hcloud-csi-driver-controller]
           env:
