--- a/chart/.snapshots/full.yaml
+++ b/chart/.snapshots/full.yaml
@@ -293,7 +293,7 @@ spec:
               cpu: 12m
               memory: 22Mi
         - name: hcloud-csi-driver
-          image: docker.io/hetznercloud/hcloud-csi-driver:v2.4.0
+          image: docker.io/hetznercloud/hcloud-csi-driver:v2.4.0 # x-release-please-version
           imagePullPolicy: Always
           command: [/bin/hcloud-csi-driver-node]
           volumeMounts:
@@ -547,7 +547,7 @@ spec:
             name: socket-dir
 
         - name: hcloud-csi-driver
-          image: docker.io/hetznercloud/hcloud-csi-driver:v2.4.0
+          image: docker.io/hetznercloud/hcloud-csi-driver:v2.4.0 # x-release-please-version
           imagePullPolicy: Always
           command: [/bin/hcloud-csi-driver-controller]
           env:
