--- a/chart/templates/controller/deployment.yaml
+++ b/chart/templates/controller/deployment.yaml
@@ -131,7 +131,7 @@ spec:
             name: socket-dir
 
         - name: hcloud-csi-driver
-          image: {{ tpl .Values.controller.image.hcloudCSIDriver.name . }}
+          image: {{ tpl .Values.controller.image.hcloudCSIDriver.name . }} # x-release-please-version
           imagePullPolicy: {{ .Values.controller.image.hcloudCSIDriver.pullPolicy }}
           command: [/bin/hcloud-csi-driver-controller]
           env:
