--- a/chart/.snapshots/full.yaml
+++ b/chart/.snapshots/full.yaml
@@ -64,6 +64,10 @@ metadata:
   annotations:
     common-annotation: common-annotation
 rules:
+# leader election
+- apiGroups: [coordination.k8s.io]
+  resources: [leases]
+  verbs: [get, watch, list, delete, update, create]
 # attacher
 - apiGroups: [""]
   resources: [persistentvolumes]
