--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -1,28 +1,18 @@
+name: Release-please
+
 on:
   push:
-    branches:
-      - main
-name: release-please
+    branches: [main]
 
 jobs:
   release-please:
-    # The secret HCLOUD_BOT_TOKEN is only available on the main repo, not in forks.
+    # Do not run on forks.
     if: github.repository == 'hetznercloud/csi-driver'
 
     runs-on: ubuntu-latest
     steps:
-      - uses: google-github-actions/release-please-action@v3
+      - uses: google-github-actions/release-please-action@v4
         with:
           token: ${{ secrets.HCLOUD_BOT_TOKEN }}
-          release-type: go
-          package-name: csi-driver
-
-          extra-files: |
-            driver/driver.go
-
-            deploy/kubernetes/hcloud-csi.yml
-
-            chart/Chart.yaml
-            chart/.snapshots/example-prod.yaml
-            chart/.snapshots/full.yaml
-            chart/.snapshots/default.yaml
+          config-file: .github/release-please-config.json
+          manifest-file: .github/release-please-manifest.json
