--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Run tests
+name: Test
 
 on:
   push:
@@ -9,32 +9,21 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
+
       - uses: actions/setup-go@v5
         with:
-          go-version: "1.21"
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - uses: actions/cache@v3
-        with:
-          path: |
-            ~/go/pkg/mod
-            ~/.cache/go-build
-          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-go-
+          go-version-file: go.mod
 
       - name: Run tests
-        run: |
-          go vet ./...
-          go test -v -race -coverprofile=coverage.txt $(go list ./... | grep -v e2e)
+        run: go test -v -race -coverprofile=coverage.txt ./...
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
 
   deploy-manifests:
-    name: Check deployment manifests
     runs-on: ubuntu-latest
+
     steps:
       - uses: yokawasa/action-setup-kube-tools@v0.9.3
         with:
@@ -43,6 +32,7 @@ jobs:
           helm: v3.11.2
 
       - uses: actions/checkout@v4
+
       - name: Generate manifests from helm chart
         run: hack/update-deployment-yamls.sh
 
@@ -54,8 +44,8 @@ jobs:
         run: echo "::error title=Deployment Manifests outdated::Please run hack/update-deployment-yamls.sh and commit the changes to deploy/"
 
   helm-chart:
-    name: Verify Helm Chart
     runs-on: ubuntu-latest
+
     steps:
       - uses: yokawasa/action-setup-kube-tools@v0.9.3
         with:
@@ -70,6 +60,7 @@ jobs:
         run: |
           hack/update-helm-snapshots.sh
           git diff --exit-code -- deploy/
+
       - name: Show warning
         if: ${{ failure() }}
         run: echo "::error title=Helm Snapshots outdated::Please run hack/update-helm-snapshots.sh and commit the changes to chart/.snapshots/"
