--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,13 +38,15 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - k3s: v1.26
+          # All k3s after January 2024 break our e2e tests, we hardcode
+          # the versions for now until we can fix the source of this.
+          - k3s: v1.26.12+k3s1
             k8s-test: v1.26.12
-          - k3s: v1.27
+          - k3s: v1.27.9+k3s1
             k8s-test: v1.27.9
-          - k3s: v1.28
+          - k3s: v1.28.5+k3s1
             k8s-test: v1.28.5
-          - k3s: v1.29
+          - k3s: v1.29.0+k3s1
             k8s-test: v1.29.0
 
     steps:
@@ -70,7 +72,7 @@ jobs:
 
       - name: Run tests
         env:
-          K3S_CHANNEL: ${{ matrix.k3s }}
+          K3S_VERSION: ${{ matrix.k3s }}
           K8S_TEST_VERSION: ${{ matrix.k8s-test }}
           SCOPE: gha-${{ github.run_id }}-${{ github.run_attempt }}-${{ matrix.k3s }}
         run: |
