--- a/hack/Dockerfile
+++ b/hack/Dockerfile
@@ -1,16 +1,34 @@
 FROM golang:1.21 as builder
-WORKDIR /csi
-ADD go.mod go.sum /csi/
+
+WORKDIR /build
+
+ADD go.mod go.sum /build/
 RUN go mod download
-ADD . /csi/
+
+ADD . /build/
 RUN ls -al
+
+ARG GOOS=linux
+ARG GOARCH=amd64
+ARG CGO_ENABLED=0
 # `skaffold debug` sets SKAFFOLD_GO_GCFLAGS to disable compiler optimizations
 ARG SKAFFOLD_GO_GCFLAGS
-RUN GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build -gcflags="${SKAFFOLD_GO_GCFLAGS}" -o controller.bin github.com/hetznercloud/csi-driver/cmd/controller
-RUN GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build -gcflags="${SKAFFOLD_GO_GCFLAGS}" -o node.bin github.com/hetznercloud/csi-driver/cmd/node
+
+RUN go build -gcflags="$SKAFFOLD_GO_GCFLAGS" -o controller.bin github.com/hetznercloud/csi-driver/cmd/controller
+RUN go build -gcflags="$SKAFFOLD_GO_GCFLAGS" -o node.bin github.com/hetznercloud/csi-driver/cmd/node
 
 FROM alpine:3.15
-RUN apk add --no-cache ca-certificates e2fsprogs xfsprogs blkid xfsprogs-extra e2fsprogs-extra btrfs-progs cryptsetup
+
+RUN apk add --no-cache \
+    blkid \
+    btrfs-progs \
+    ca-certificates \
+    cryptsetup \
+    e2fsprogs \
+    e2fsprogs-extra \
+    xfsprogs \
+    xfsprogs-extra
+
 ENV GOTRACEBACK=all
-COPY --from=builder /csi/controller.bin /bin/hcloud-csi-driver-controller
-COPY --from=builder /csi/node.bin /bin/hcloud-csi-driver-node
+COPY --from=builder /build/controller.bin /bin/hcloud-csi-driver-controller
+COPY --from=builder /build/node.bin /bin/hcloud-csi-driver-node
