--- a/test/integration/Dockerfile
+++ b/test/integration/Dockerfile
@@ -1,7 +1,17 @@
 FROM alpine:3.13
 
-RUN apk add --no-cache ca-certificates e2fsprogs xfsprogs blkid xfsprogs-extra e2fsprogs-extra btrfs-progs cryptsetup
-RUN apk add --no-cache coreutils
+RUN apk add --no-cache \
+    blkid \
+    btrfs-progs \
+    ca-certificates \
+    cryptsetup \
+    e2fsprogs \
+    e2fsprogs-extra \
+    xfsprogs \
+    xfsprogs-extra
+
+RUN apk add --no-cache \
+    coreutils
 
 WORKDIR /test
 COPY integration.tests /test/integration.tests
