--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,8 +23,8 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
 
-  test-kubernetes:
-    name: e2e k3s ${{ matrix.k3s }}
+  kubernetes:
+    name: kubernetes ${{ matrix.k3s }}
     runs-on: ubuntu-latest
 
     permissions:
@@ -33,21 +33,22 @@ jobs:
     concurrency: ${{ github.workflow }}-${{ github.ref }}-${{ matrix.k3s }}
 
     strategy:
-      # The e2e tests are flaky and often one of the jobs fails. The default setting
-      # causes all other currently running jobs to abort and all need to be restarted.
-      fail-fast: false
+      fail-fast: false # Continue tests matrix if a flaky run occur.
       matrix:
         include:
-          # All k3s after January 2024 break our e2e tests, we hardcode
-          # the versions for now until we can fix the source of this.
-          - k3s: v1.26.12+k3s1
-            k8s-test: v1.26.12
-          - k3s: v1.27.9+k3s1
-            k8s-test: v1.27.9
-          - k3s: v1.28.5+k3s1
-            k8s-test: v1.28.5
-          - k3s: v1.29.0+k3s1
-            k8s-test: v1.29.0
+          - k3s: v1.26
+            k8s-test: v1.26.15
+          - k3s: v1.27
+            k8s-test: v1.27.15
+          - k3s: v1.28
+            k8s-test: v1.28.11
+          - k3s: v1.29
+            k8s-test: v1.29.6
+
+    env:
+      K3S_CHANNEL: ${{ matrix.k3s }}
+      K8S_TEST_VERSION: ${{ matrix.k8s-test }}
+      ENV: gha-${{ github.run_id }}-${{ github.run_attempt }}-${{ matrix.k3s }}
 
     steps:
       - uses: actions/checkout@v4
@@ -56,9 +57,12 @@ jobs:
         with:
           go-version-file: go.mod
 
-      - uses: hetznercloud/tps-action@main
+      - uses: opentofu/setup-opentofu@v1
+        with:
+          tofu_version: v1.7.2
+          tofu_wrapper: false
 
-      - uses: hetznercloud/setup-hcloud@v1
+      - uses: docker/setup-buildx-action@v3
 
       - uses: yokawasa/action-setup-kube-tools@v0.11.1
         with:
@@ -66,26 +70,30 @@ jobs:
             helm
             kubectl
             skaffold
-          helm: v3.11.2
-          kubectl: v1.29.0
-          skaffold: v2.3.0
+          helm: v3.15.2 # renovate: datasource=github-releases depName=helm/helm
+          kubectl: v1.29.6 # renovate: datasource=github-releases depName=kubernetes/kubernetes
+          skaffold: v2.12.0 # renovate: datasource=github-releases depName=GoogleContainerTools/skaffold
+
+      - name: Setup k3sup
+        run: curl -sLS https://get.k3sup.dev | sh
+
+      - name: Setup k8s test binaries
+        run: make -C test/e2e/kubernetes bin
+
+      - uses: hetznercloud/tps-action@main
+
+      - name: Setup environment
+        run: make -C dev up
+
+      - name: Run skaffold
+        run: |
+          source dev/files/env.sh
+          skaffold run
 
       - name: Run tests
-        env:
-          K3S_VERSION: ${{ matrix.k3s }}
-          K8S_TEST_VERSION: ${{ matrix.k8s-test }}
-          SCOPE: gha-${{ github.run_id }}-${{ github.run_attempt }}-${{ matrix.k3s }}
         run: |
-          curl -sLS https://get.k3sup.dev | sh
-
-          trap "hack/dev-down.sh" EXIT
-          source <(hack/dev-up.sh)
-
-          skaffold build --tag="e2e-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER}"
-          tag=$(skaffold build --tag="e2e-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER}" --quiet --output="{{ (index .Builds 0).Tag }}")
-          skaffold deploy --images=docker.io/hetznercloud/hcloud-csi-driver=$tag
-
-          test/e2e/kubernetes/run-e2e-tests.sh
+          source dev/files/env.sh
+          make -C test/e2e/kubernetes parallel serial
 
   deploy-manifests:
     runs-on: ubuntu-latest
@@ -95,7 +103,7 @@ jobs:
         with:
           setup-tools: |
             helm
-          helm: v3.11.2
+          helm: v3.11.2 # renovate: datasource=github-releases depName=helm/helm
 
       - uses: actions/checkout@v4
 
@@ -117,7 +125,7 @@ jobs:
         with:
           setup-tools: |
             helm
-          helm: v3.11.2
+          helm: v3.11.2 # renovate: datasource=github-releases depName=helm/helm
 
       - uses: actions/checkout@v4
 
