ci: cleanup resources after e2e tests
Remove all deployed resources to avoid running into limit errors.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -102,6 +102,11 @@ jobs:
           source dev/files/env.sh
           make -C test/e2e/kubernetes serial
 
+      - name: Cleanup
+        if: ${{ always() }}
+        continue-on-error: true
+        run: make -C dev down
+
   deploy-manifests:
     runs-on: ubuntu-latest
 
