chore: reuse terraform k8s-dev module
Load the k8s-dev module from https://github.com/hetznercloud/terraform-k8s-dev

--- a/dev/.gitignore
+++ b/dev/.gitignore
@@ -1,9 +1,5 @@
-.terraform*
-terraform.tfstate
-terraform.tfstate.backup
+.terraform/
+terraform.tfstate*
 *.auto.tfvars
 
-files/*
-!files/.gitkeep
-
-.env
+files/
