--- a/dev/Makefile
+++ b/dev/Makefile
@@ -5,12 +5,15 @@ ENV ?= dev
 K3S_CHANNEL ?= stable
 
 env.auto.tfvars:
-	@echo 'name = "$(ENV)"' > "$@"
+	@echo 'name         = "$(ENV)"' > "$@"
 	@echo 'hcloud_token = "$(HCLOUD_TOKEN)"' >> "$@"
-	@echo 'k3s_channel = "$(K3S_CHANNEL)"' >> "$@"
+	@echo 'k3s_channel  = "$(K3S_CHANNEL)"' >> "$@"
 
 .terraform:
 	tofu init
+
+validate: .terraform
+	tofu validate
 
 up: .terraform env.auto.tfvars
 	tofu apply -auto-approve
@@ -24,4 +27,4 @@ port-forward:
 	bash files/registry-port-forward.sh
 
 clean:
-	rm -Rf files/* .terraform* terraform.tfstate* env.auto.tfvars
+	rm -Rf files/ .terraform/ terraform.tfstate* env.auto.tfvars
