deps: Replaced deprecated linter
exportloopref is no longer relevant since Go v1.22 and got replaced with copyloopvar. This causes a warning during lint runs.

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -15,8 +15,8 @@ linters:
   disable-all: true
   enable:
     - bodyclose
+    - copyloopvar
     - errcheck
-    - exportloopref
     - gci
     - gocritic
     - gofmt
